--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,14 @@
 image: Visual Studio 2022
 configuration: Release
 
+clone_script:
+    - cmd: git clone -q --recursive --branch=%APPVEYOR_REPO_BRANCH% https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
+    - cmd: git checkout -qf %APPVEYOR_REPO_COMMIT%
+
 before_build:
     - cmd: nuget restore
 
-    - ps: Start-FileDownload "https://www.autodesk.com/content/dam/autodesk/www/adn/fbx/2020-2-1/fbx202021_fbxsdk_vs2019_win.exe" -FileName "FBX.exe"
+    - ps: Start-FileDownload "https://www.autodesk.com/content/dam/autodesk/www/adn/fbx/2020-3-2/fbx202032_fbxsdk_vs2019_win.exe" -FileName "FBX.exe"
     - ps: Start-Process -Wait "FBX.exe" "/S /D=$($env:APPVEYOR_BUILD_FOLDER)\MikuMikuLibrary.Native\Dependencies\FBX"
 
 build:
