--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ clone_script:
 before_build:
     - cmd: nuget restore
 
-    - ps: Start-FileDownload "https://www.autodesk.com/content/dam/autodesk/www/adn/fbx/2020-3-2/fbx202032_fbxsdk_vs2019_win.exe" -FileName "FBX.exe"
+    - ps: Invoke-WebRequest "https://www.autodesk.com/content/dam/autodesk/www/adn/fbx/2020-3-2/fbx202032_fbxsdk_vs2019_win.exe" -OutFile "FBX.exe"
     - ps: Start-Process -Wait "FBX.exe" "/S /D=$($env:APPVEYOR_BUILD_FOLDER)\MikuMikuLibrary.Native\Dependencies\FBX"
 
 build:
